# claudia-rh

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  generate-ico.mjs  generate-icons.mjs  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
npm-package/: package.json
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db_watcher.rs  idle_watcher.rs  lib.rs  main.rs  migration.rs  notificacoes.rs  prompt.rs  prompt_sistema_runtime.md  pty_manager.rs
src-tauri/src/commands/: cover_letter.rs  credenciais.rs  curriculos.rs  estado.rs  feedback.rs  linkedin.rs  mod.rs  notif.rs  perfil.rs  prompts.rs  pty.rs  sessao.rs  startup.rs  updater.rs  welcome.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.sql
src-tauri/src/mcp/: mod.rs  server.rs
src-tauri/src/mcp/tools/: mod.rs  pendencias.rs  profile.rs  vagas.rs
src/components/: Configuracoes.tsx  Dashboard.tsx  Feedback.tsx  Pendencias.tsx  Perfil.tsx  Sidebar.tsx  Terminal.tsx  TitleBar.tsx  Vagas.tsx  Welcome.tsx
src/components/dashboard/: AgendamentoModal.tsx  DrumPicker.tsx  LimitModal.tsx  ModoCard.tsx  VariantCardDash.tsx  constants.ts  index.tsx  types.ts
src/components/perfil/: ChatView.tsx  index.tsx  (+7 more)
src/i18n/: en.ts  index.ts  pt.ts
src/lib/: format.ts  markdown.tsx
src/styles/: tokens.css
(+1 files in other folders)
