[package]
name = "claudia-rh"
version = "0.2.0"
description = "Automated job-application agent powered by Claude Code + Chrome"
authors = ["Claudia RH Contributors"]
license = "MIT"
repository = "https://github.com/JohnGabie/claudia-rh"
homepage = "https://github.com/JohnGabie/claudia-rh"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claudia_rh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

